# Smart-Home-Dashboard

./: CMakeLists.txt  README.md  SmartDashboard.pro  display_motion_react.py  qml.qrc
assets/: display_motion_react.py
cpp/: backend.cpp  backend.h  main.cpp
qml/: Main.qml
qml/components/: Button.qml  IconLabel.qml  LeftPane.qml  MiddlePaneWidget.qml  RightPane.qml  Slider.qml
qml/pane/: ClimatePane.qml  EnergyPane.qml  HomePane.qml  LeftPane.qml  MusicPane.qml
